# flightsim

./: .gitignore  Cargo.toml  README.md  build.ps1  build.rs
src/: main.rs
src/rendering/: base.rs  device.rs  main_loop.rs  mod.rs  pipeline.rs  runtime.rs
src/rendering/tracy/: mod.rs
src/rendering/vk_alloc/: Cargo.toml  README.md
src/rendering/vk_alloc/src/: lib.rs
src/shaders/: vertex.vert
