[package]
name = "flightsim"
version = "0.1.0"
edition = "2021"
authors = ["fabien <fabien@cournoyer.club>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Super-Pizza/flightsim"
description = "Flight Simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debuginfo = []

[dependencies]
ash = "0.37"
ash-window = "0.12"
winit = { version = "0.29.3", features = [
    "rwh_05",
    "x11",
], default-features = false }
raw-window-handle = "0.5.2"

[profile.release]
opt-level = 2
lto = "thin"
strip = true

[profile.dev]
opt-level = 1
lto = false

[profile.production]
inherits = "release"
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.production.package.'*']
opt-level = "z"
codegen-units = 1
strip = true
