[package]
name = "vk-alloc"
version = "2.3.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "A segregated list memory allocator for Vulkan."
license = "Zlib OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasenbanck/vk-alloc"
categories = ["rendering::graphics-api", "rendering"]
keywords = ["vk", "vulkan", "ash", "allocator", "memory"]
edition = "2018"

[dependencies]
ash = { workspace = true }
parking_lot = "0.12"

[features]
vk-buffer-device-address = []

[dev-dependencies]
romu = { version = "0.5", default-features = false }
